selectivizr - change log
========================

Current Build
-------------

 * NEW - selectivizr now honours media specific @imports in style sheets.
 * BUG - comments placed between @import rules caused the import to fail.


v1.0.2
------

 * BUG - fixed Google Closure Compiler issue that added 2 global vars - sorry about that!
 * NEW - removed the eval() from determineSelectorMethod()
 * BUG - selectivizr incorrectly detects Yahoo! profiler as YUI selector library
 * NEW - selectivizr can now be "lazy-loaded"
 * NEW - switched DOMReady back to Diego Perini's (new) ContentLoaded.
 * BUG - asset urls using the 'data:' scheme (i.e. background-image) resolved to a path (Chris Korhonen)
 * BUG - resolveUrl() failed if the context url contained a hash followed by a '/' (Zee Agency)
 * BUG - IE version detection wasn't IE>9 friendly (reported by Paul Irish)



v1.0.1
------

 * BUG - @import urls not wrapped with "url()" are now correctly processed 
 * BUG - relative urls are now correctly resolved
 * BUG - patched [*=""] selector in IE8 (returns elements it shouldn't)



v1.0.0
------

ie-css3.js is now stable enough to be released with out a beta suffix - say hello to selectivizr v1!
 


v0.9.7b
-------

 * NEW - Complete rewrite of the stylesheet parser.
 * NEW - :not() pseudo support.
 * NEW - Attribute selector support in IE6 [att] [att="x"] [att~="x"] [att^="x"] [att$="x"] [att*="x"] and [att|="x"]
 * NEW - Fixes native empty attribute selector support in IE7 [att^=""] [att$=""] [att*=""] and IE8 [att^=""] [att$=""]
 * BUG - :enabled and :disabled elements now change state properly. (Uses polling)
 * BUG - Emulation no longer fails in IE6 when more than 2 classes are applied to an element



v0.9.6b
-------

 * BUG - IE8 :target pseudo-class emulation fails with jQuery (but not with Sizzle) (reported by Tom Law)
 * BUG - ie-css3.js won't run if page is in an iframe (switched DOM Load detection to Dean Edwards deferred script method)