@@ -42,9 +42,9 @@
 		var defaultEngine = engines["NWMatcher"]["1.2.3"];
 		
 	</script>
+	<link rel="stylesheet" href="css/master.css" >
 	<script src="js/test.js"></script>
 	<script src="../../selectivizr.js"></script>
-	<link rel="stylesheet" href="css/master.css" >
 </head>
 <body>
 	<h1>Selectivizr test suite</h1>
