@@ -4,8 +4,12 @@ selectivizr - change log
 Current Build
 -------------
 
- * NEW - selectivizr now honours media specific @imports in style sheets.
- * BUG - comments placed between @import rules caused the import to fail.
+ * CHG - selectivizr MUST now be included AFTER all <link>'d stylesheets!
+ * BUG - IE fails to render page (WSOD (White Screen of Death)) under certain conditions
+ * BUG - @font-face can cause IE to hang when processing CSS files after DOM load
+ * BUG - split DOM and CSS parsing into two stages. CSS parsing in now instant
+ * NEW - selectivizr now honours media specific @imports in style sheets
+ * BUG - comments placed between @import rules caused the import to fail
 
 
 v1.0.2
